--- a/pages/gpg.html
+++ b/pages/gpg.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.1/styles/default.min.css">
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
     <link href="../css/screen.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
@@ -36,7 +37,8 @@
                 <a href="/pages/about.html">About</a>
                 </li>
                 
-                <li><a href="/feed.xml">RSS</a></li>
+                <li><a href="/feed.xml"><img src="/images/rss.png"></a></li>
+
             </ul>
         </div><!--/.nav-collapse -->
     </div><!--/.container-fluid -->
@@ -75,7 +77,9 @@ sub   4096g/1CD49A37 2012-12-17 &#91;expires: 2017-12-16&#93;
         </div>
 
         <div class="col-md-3">
-            <div id="sidebar">
+          <div id="sidebar">
+            <a href="mailto:sip.red-elvis.net"><img src="/images/phone_icon_offhook.png" alt="+6421629488"></a>
+            <g:hangout render="createhangout"></g:hangout>
                 <h3>Links</h3>
                 <ul id="links">
                     <li><a href="http://cryogenweb.org/docs/home.html">Cryogen Docs</a></li>
